# wasm-component-semver

./: Cargo.toml  LICENSE  README.md  devenv.nix
.github/workflows/: test.yaml
src/: lib.rs
