[package]
name = "wasm-component-semver"
description = "Library for working with semantic versions using logic that is compatible with the WebAssembly Component Model implementation in Wasmtime"
authors = ["ANDYL Open Source <oss@andyl.com>"]
version = "1.0.2-pre"
edition = "2024"
license = "MIT"

[features]
default = []
borsh = [
    "dep:borsh",
]
serde = [
    "dep:serde",
    "semver/serde",
]

[dependencies]
borsh = { version = "1", optional = true }
derivative = "2"
semver = "1"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"
